/organizadores version JSON hecha
